keep adjusting spacing

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -340,12 +340,12 @@ function convertBool(b) {
     <div style="width:30%; float:left;">
         <input id = "search" style="font-size:15px;" name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
     </div>
-    <div style="width:10px; float:left;">
+<!--     <div style="width:10px; float:left;">
       <input style="color: white;" placeholder="" readonly>
-   </div>
+   </div> -->
     <div style="width:60px; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="false">
-        <input id="clock" type="text" class="form-control" name="t" placeholder=" Time" style="font-size: 15px; color: white; cursor: pointer;" onfocus="this.blur()" readonly>
+        <input id="clock" type="text" class="form-control" name="t" placeholder="  Time" style="font-size: 15px; color: white; cursor: pointer;" onfocus="this.blur()" readonly>
       </div>
     </div>
    <div style="width:5px; float:left;">
