update when empty

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -461,7 +461,7 @@ function dateCheck(){
     //document.getElementById("dropdownMenuButton").width = ((output.length + 1) * 8) + 'px';
   }
   else{
-    //document.getElementById("dropdownMenuButton").placeholder="   Date";
+    document.getElementById("dropdownMenuButton").value=null;
     //document.getElementById("dropdownMenuButton").width="50px";
   }
 }
