--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -252,24 +252,17 @@
       display: inline-block;
       float: none;
     }
-    .col-xs-4 {
-      width: 190px;
-      font-size: small;
-      background-color: #d3d3d3;
-      color: black;
-      padding-left: 10px;
-      padding-right: 10px;
-     padding-top: 40px;
-      padding-bottom: 40px;
-    }
     .card {
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       transition: 0.3s;
-      width: 170px;
+      width: 140px;
       border-radius: 5px;
       margin-right: 6px;
       padding-top:30px;
       padding-bottom:30px;
+    }
+    .card a{
+      font-size: 15px;
     }
     .card:hover {
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
