--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -264,6 +264,9 @@
     .card a{
       font-size: 15px;
     }
+    .card p{
+      font-size: 15px;
+    }
     .card:hover {
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     }
