container instead of card

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -261,10 +261,10 @@
       padding-top:30px;
       padding-bottom:30px;
     }
-    .card a{
+    .container a{
       font-size: 15px;
     }
-    .card p{
+    .container p{
       font-size: 15px;
     }
     .card:hover {
