--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -389,7 +389,6 @@ function convertBool(b) {
     </div>
   </form>
 
-
   <div style="float: right; padding-right: 10px; position: fixed; top: 10px; right: 0;">
     <span style="font-size:25px;cursor:pointer; color: white; padding-bottom: 7px;" onclick="openNav()">&#9776;</span>
       </div>
@@ -493,10 +492,10 @@ function addResultRow(id, text) {
       alias = "{{b.names}}".split("/")[1];
       if (alias) {
         var formatted = truncate("{{b}}", 20)+"<br>("+truncate(alias.substring(2,alias.length),15)+")";
-        addBuildingRow("buildings", "Building:<br><a href=\"/building/{{b.pk}}\" style=\"color: black;\">"+formatted);
+        addBuildingRow("buildings", "Building:<br><a href=\"/building/{{b.pk}}\" style=\"color: black; font-size: 15px;\">"+formatted);
       } else {
         var formatted = truncate("{{b}}", 20);
-        addBuildingRow("buildings", "<br>Building:<br><a href=\"/building/{{b.pk}}\" style=\"color: black;\">"+formatted);
+        addBuildingRow("buildings", "<br>Building:<br><a href=\"/building/{{b.pk}}\" style=\"color: black; font-size: 15px;\">"+formatted);
       }
     {% endfor %}
 {% endif %}
@@ -504,7 +503,7 @@ function addResultRow(id, text) {
 {% if classes %}
     {% for c in classes %}
       var formatted = truncate("{{c}}", 15)+"<br>{{c.section}} {{c.time}}<br>"+truncate("{{c.title}}", 20);
-      addCourseRow("buildings", "<a href=\"/course/{{c.pk}}\" style=\"color: black;\">"+formatted);
+      addCourseRow("buildings", "<a href=\"/course/{{c.pk}}\" style=\"color: black; font-size: 15px;\">"+formatted);
     {% endfor %}
 {% endif %}
 </script>
