--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -477,7 +477,7 @@ function addBuildingRow(id, text) {
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 function addResultRow(id, text) {
-  $("#"+id).append("<div \" style=\"padding-top: 10px; padding-bottom: 30px;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
+  $("#"+id).append("<div \" style=\"padding-top: 7px; padding-bottom: 20px;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 
@@ -491,11 +491,11 @@ function addResultRow(id, text) {
     {% for b in buildings %}
       alias = "{{b.names}}".split("/")[1];
       if (alias) {
-        var formatted = truncate("{{b}}", 20)+"<br>("+truncate(alias.substring(2,alias.length),15)+")";
-        addBuildingRow("buildings", "Building:<br><a href=\"/building/{{b.pk}}\" style=\"color: black;\">"+formatted);
+        var formatted = "Building:<br>"+truncate("{{b}}", 20)+"<br>("+truncate(alias.substring(2,alias.length),15)+")";
+        addBuildingRow("buildings", "<a href=\"/building/{{b.pk}}\" style=\"color: black;\">"+formatted);
       } else {
-        var formatted = truncate("{{b}}", 20);
-        addBuildingRow("buildings", "<br>Building:<br><a href=\"/building/{{b.pk}}\" style=\"color: black;\">"+formatted);
+        var formatted = "Building:<br>"+truncate("{{b}}", 20);
+        addBuildingRow("buildings", "<br><a href=\"/building/{{b.pk}}\" style=\"color: black;\">"+formatted);
       }
     {% endfor %}
 {% endif %}
