adjust listoverlay size

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -206,10 +206,11 @@
     }
     .listText {
       color: white;
+      font-size: 15px;
     }
     .listTitle {
       color: white;
-      font-size: large;
+      font-size: 17;
       text-align: left;
     }
     /* End saved list css */
