adjust remove button to be smaller

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -72,7 +72,11 @@
         margin: 0 auto;
         width: 350px;
     }
-    .btn-remove {background-color: #f44336;} /* red */
+    .btn-remove {
+      background-color: #f44336; /* red */
+      font-size: 12px;
+      padding: 3px;
+    } 
     .export {
       padding: 5px
     }
