--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -76,6 +76,7 @@
       background-color: #f44336; /* red */
       font-size: 12px;
       padding: 3px;
+      float: right;
     } 
     .export {
       padding: 5px
@@ -408,7 +409,7 @@ function convertBool(b) {
            <td>
              <div class="listTitle" style="float: left;"><i class="fa fa-star"></i>Favorites</div>
          </td>
-         <div style="float: right;">
+         <div style="float: right; padding-right: 3px;">
            <a href="javascript:void(0)" style="color: white" class="closebtn" onclick="closeFavorites()">&times;</a>
          </div>
        </tr>
