--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -208,6 +208,9 @@
       z-index: 4;
       cursor: pointer;
     }
+    .listOverlay btn-remove{
+      float: right;
+    }
     .listText {
       color: white;
       font-size: 12px;
@@ -590,7 +593,7 @@ toggle between hiding and showing the dropdown content */
       var cols = "";
 
       cols += '<td><div class="listText" name="name">'+name+'</div></td>';
-      cols += '<td style="float: right;">'+button+'</td>';
+      cols += '<td>'+button+'</td>';
       newRow.append(cols);
       $("table.order-list").append(newRow);
   }
