change green buttons

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -77,6 +77,10 @@
       font-size: 12px;
       padding: 3px;
     }
+    .btn-success{
+      font-size: 12px;
+      padding: 3px;
+    }
     .export {
       padding: 5px
     }
