--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -81,7 +81,7 @@
                     <h4>Week of March 26th</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Whatever was done on Week 1</p>
+                    <p class="text-muted">Created Python script to scrape building/class data to put into a Postgres database, used Leaflet/JS to build a map with basic features, began implementing searching.</p>
                   </div>
                 </div>
               </li>
@@ -94,7 +94,7 @@
                     <h4>Week of April 2nd</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Whatever was done on Week 2</p>
+                    <p class="text-muted">Started hosting the site on Heroku, linked the frontend map design and the backend database using the Django framework and implemented a search bar feature to query the database and maps a result to the map. </p>
                   </div>
                 </div>
               </li>
@@ -107,7 +107,7 @@
                     <h4>Week of April 9th</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Whatever was done on Week 3</p>
+                    <p class="text-muted">Restructured search logic to improve searching, refined searching by adding filters by day/time, added resource overlays to the map</p>
                   </div>
                 </div>
               </li>
@@ -120,7 +120,7 @@
                     <h4>Week of April 16th</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Whatever was done on Week 4</p>
+                    <p class="text-muted">Fixed bugs regarding search filters, set up CAS authentication, added function to save/favorite classes, and improved the UI substantially (fullscreen map, overlays). </p>
                   </div>
                 </div>
               </li>
@@ -133,7 +133,7 @@
                     <h4>Week of April 23rd</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Whatever was done on Week 5</p>
+                    <p class="text-muted">Added overlay to display saved classes, implemented a function to search by clicking on a building, added additional buttons to the map, and eliminated pesky bugs.</p>
                   </div>
                 </div>
               </li>
@@ -146,7 +146,7 @@
                     <h4>Week of April 30th</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Whatever was done on Week 6</p>
+                    <p class="text-muted">Implemented a heatmap to indicate the number of students in each building, refined search results page to display as an overlay, substantially improved UI based on user feedback </p>
                   </div>
                 </div>
               </li>
@@ -159,7 +159,7 @@
                     <h4>Week of May 7th</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Demo Week</p>
+                    <p class="text-muted">Presented our project, </p>
                   </div>
                 </div>
               </li>
