--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -234,7 +234,7 @@
       max-height: 40%;
       max-width: 40%;
       overflow-y: auto;
-      font-size: small;
+      font-size: 12px;
     }
     /* Search result overlay */
     .resultsContainer {
