--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -64,7 +64,7 @@
     </header>
     
     <!-- About -->
-    <section id="about">
+    <section class="bg-light" id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
