--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -76,7 +76,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-search fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Feature one</h4>
             <p class="text-muted">About feature one</p>
@@ -84,7 +84,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-pin fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Feature two</h4>
             <p class="text-muted">About feature two</p>
@@ -92,7 +92,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Feature three</h4>
             <p class="text-muted">About feature three</p>
