--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -69,7 +69,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">About</h2>
-            <h3 class="section-subheading text-muted">Paragraph about ClassMaps</h3>
+            <h3 class="section-subheading text-muted">ClassMaps is a web application that gives Princeton students and easy way to find the location of their classes, as well as other resources and places on campus. </h3>
           </div>
         </div>
         <div class="row text-center">
