--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -78,7 +78,7 @@
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-search fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Feature one</h4>
+            <h4 class="service-heading">Search by course, or building</h4>
             <p class="text-muted">About feature one</p>
           </div>
           <div class="col-md-4">
@@ -86,7 +86,7 @@
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-pin fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Feature two</h4>
+            <h4 class="service-heading">Interactive heatmap</h4>
             <p class="text-muted">About feature two</p>
           </div>
           <div class="col-md-4">
@@ -94,7 +94,7 @@
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Feature three</h4>
+            <h4 class="service-heading">Resource overlay</h4>
             <p class="text-muted">About feature three</p>
           </div>
         </div>
