--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -500,6 +500,10 @@ function addResultRow(id, text) {
   var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
   addResultRow("buildings", "Results for: \"{{q}}\"<br>{{d}}<br>{{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
+{% else %}
+  if(document.getElementById("search").value != null)
+    console.log("no results");
+ console.log(document.getElementById("search").value);
 {% endif %}
 
 {% if buildings %}
