--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -78,24 +78,24 @@
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-search fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Search by course, or building</h4>
-            <p class="text-muted">About feature one</p>
+            <h4 class="service-heading">Searching</h4>
+            <p class="text-muted">We allow students to quickly and efficiently find the location of their classes without the hassle of separately looking up their class and the building it is located in. </p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-pin fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-map-marker fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Interactive heatmap</h4>
-            <p class="text-muted">About feature two</p>
+            <h4 class="service-heading">Saving</h4>
+            <p class="text-muted">Users can save their classes so that they will always have the location of their classes on hand. </p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Resource overlay</h4>
-            <p class="text-muted">About feature three</p>
+            <h4 class="service-heading">Resource overlays and Heatmap</h4>
+            <p class="text-muted">Additional features include campus resource locations (printers, laundry, etc) and a heatmap of the number of students in each building. </p>
           </div>
         </div>
       </div>
