--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -94,7 +94,7 @@
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Resource overlays and Heatmap</h4>
+            <h4 class="service-heading">Overlays and Heatmap</h4>
             <p class="text-muted">Additional features include campus resource locations (printers, laundry, etc) and a heatmap of the number of students in each building. </p>
           </div>
         </div>
