--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -79,7 +79,7 @@
               <i class="fa fa-search fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Searching</h4>
-            <p class="text-muted">We allow students to quickly and efficiently find the location of their classes without the hassle of separately looking up their class and the building it is located in. </p>
+            <p class="text-muted">We allow users to quickly and efficiently find the location of their classes without the hassle of separately looking up their class and the building it is located in. </p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -87,7 +87,7 @@
               <i class="fa fa-map-marker fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Saving</h4>
-            <p class="text-muted">Users can save their classes so that they will always have the location of their classes on hand. </p>
+            <p class="text-muted">Users can save all of their classes so that they will always have the location of their classes on hand. </p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -95,7 +95,7 @@
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Overlays and Heatmap</h4>
-            <p class="text-muted">Additional features include campus resource locations (printers, laundry, etc) and a heatmap of the number of students in each building. </p>
+            <p class="text-muted">Additional features include campus resource overlays (printers, laundry, etc) and a heatmap of the number of students in each building. </p>
           </div>
         </div>
       </div>
