--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -251,7 +251,7 @@
           </div>
           <div class="col-sm-4" >
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="{% static 'classes/img/team/1.jpg' %}" alt="">
+              <img class="mx-auto rounded-circle" src="https://media.licdn.com/dms/image/C4D03AQE26wlRH0slJQ/profile-displayphoto-shrink_200_200/0?e=1529204400&v=beta&t=Y2Le7FqCs36gC8ezljl4XZ-HglKZdM34p8gZPo6tuBo" alt="">
               <h4>Jerry Wei</h4>
               <p class="text-muted">Advisor</p>
             </div>
