--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -500,10 +500,12 @@ function addResultRow(id, text) {
   var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
   addResultRow("buildings", "Results for: \"{{q}}\"<br>{{d}}<br>{{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
-{% else %}
-  if(document.getElementById("search").value != null)
-    console.log("no results");
- console.log(document.getElementById("search").value);
+{% else if not building and not class %}
+//   if(document.getElementById("search").value != null){
+//   }  
+  matchesBlock.style.display = "block";
+  addResultRow("buildings", "Results for: \"{{q}}\"<br>{{d}}<br>{{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
+  addResultRow("buildings", "<img src=\"../../static/classes/images/calvinandhobbes.png\" alt=\"NotFound\" class=\"center\" style=\"width:100%;\">");
 {% endif %}
 
 {% if buildings %}
