--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -503,6 +503,8 @@ function addResultRow(id, text) {
 {% elif not building and not class %}
 //   if(document.getElementById("search").value != null){
 //   }  
+  console.log("no results");
+  var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
   addResultRow("buildings", "Results for: \"{{q}}\"<br>{{d}}<br>{{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
   addResultRow("buildings", "<img src=\"../../static/classes/images/calvinandhobbes.png\" alt=\"NotFound\" class=\"center\" style=\"width:100%;\">");
