--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -221,21 +221,21 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="{% static 'classes/img/team/1.jpg' %}" alt="">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/adrian.jpg' %}" alt="">
               <h4>Adrian Tong</h4>
               <p class="text-muted">Project Manager</p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="{% static 'classes/img/team/2.jpg' %}" alt="">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/david.jpg' %}" alt="">
               <h4>David Todd</h4>
               <p class="text-muted">Back-End Developer</p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="{% static 'classes/img/team/3.jpg' %}" alt="">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/yang.jpg' %}" alt="">
               <h4>Yang Song</h4>
               <p class="text-muted">Front-End Developer</p>
             </div>
@@ -244,21 +244,21 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="{% static 'classes/img/team/1.jpg' %}" alt="">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/andy.jpg' %}" alt="">
               <h4>Andy Lin</h4>
               <p class="text-muted">Front-End Developer</p>
             </div>
           </div>
           <div class="col-sm-4" >
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="https://media.licdn.com/dms/image/C4D03AQE26wlRH0slJQ/profile-displayphoto-shrink_200_200/0?e=1529204400&v=beta&t=Y2Le7FqCs36gC8ezljl4XZ-HglKZdM34p8gZPo6tuBo" alt="">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/jerry.jpg' %}" alt="">
               <h4>Jerry Wei</h4>
               <p class="text-muted">Advisor</p>
             </div>
           </div>
           <div class="col-sm-4" >
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="https://cdh.princeton.edu/media/uploads/people/briankernighan.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/brian.jpg' %}" alt="">
               <h4>Brian Kernighan</h4>
               <p class="text-muted">Instructor</p>
             </div>
