--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -495,6 +495,10 @@ function addResultRow(id, text) {
   $("#"+id).append("<div \" style=\"padding-top: 7px; padding-bottom: 20px;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
+function addImageRow(id, text) {
+  $("#"+id).append("<div \" style=\"padding-top: 0; width: auto; padding-bottom: 0;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
+    "<p>"+text+"</p>"+"</div>"+"</div>");
+}
 
 {% if buildings or classes %}
   var matchesBlock = document.getElementById("resultsContainer");
@@ -507,7 +511,7 @@ function addResultRow(id, text) {
   var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
   addResultRow("buildings", "Results for: \"{{q}}\"<br>{{d}}<br>{{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
-  addResultRow("buildings", "<img src=\"../../static/classes/images/calvinandhobbes.png\" alt=\"NotFound\" class=\"center\" style=\"width:100%;\">");
+  addImageRow("buildings", "<img src=\"../../static/classes/images/calvinandhobbes.png\" alt=\"NotFound\" class=\"center\" style=\"width:100%;\">");
 {% endif %}
 
 {% if buildings %}
