--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -496,7 +496,7 @@ function addResultRow(id, text) {
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 function addImageRow(id, text) {
-  $("#"+id).append("<div \" style=\"padding-top: 0; width: auto; padding-bottom: 0;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
+  $("#"+id).append("<div \" style=\"padding-top: 5px; width: 500px; padding-bottom: 0;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 
