--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -244,7 +244,7 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/andy.jpg' %}" alt="">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/andyl.jpg' %}" alt="">
               <h4>Andy Lin</h4>
               <p class="text-muted">Front-End Developer</p>
             </div>
