--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -496,7 +496,7 @@ function addResultRow(id, text) {
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 function addImageRow(id, text) {
-  $("#"+id).append("<div \" style=\"padding-top: 5px; width: 500px; padding-bottom: 0;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
+  $("#"+id).append("<div \" style=\"padding-top: 5px; width: 400px; padding-bottom: 0;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 
@@ -511,7 +511,7 @@ function addImageRow(id, text) {
   var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
   addResultRow("buildings", "Results for: \"{{q}}\"<br>{{d}}<br>{{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
-  addImageRow("buildings", "<img src=\"../../static/classes/images/calvinandhobbes.png\" alt=\"NotFound\" class=\"center\" style=\"width:100%;\">");
+  addImageRow("buildings", "<img src=\"{% static 'classes/images/calvinandhobbes.png'%}" alt=\"NotFound\" class=\"center\" style=\"width:100%;\">");
 {% endif %}
 
 {% if buildings %}
