--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -258,7 +258,7 @@
           </div>
           <div class="col-sm-4" >
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/brian.jpg' %}" alt="">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/brian2.jpg' %}" alt="">
               <h4>Brian Kernighan</h4>
               <p class="text-muted">Instructor</p>
             </div>
