--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -224,6 +224,13 @@
               <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/adrian.jpg' %}" alt="">
               <h4>Adrian Tong</h4>
               <p class="text-muted">Project Manager</p>
+              <ul class="list-inline social-buttons">
+                <li class="list-inline-item">
+                  <a href="https://www.linkedin.com/in/audrey-cheng-48295a114/">
+                    <i class="fa fa-linkedin"></i>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
           <div class="col-sm-4">
