--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -519,7 +519,7 @@ function addImageRow(id, text) {
   var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
   addResultRow("buildings", "Results for: \"{{q}}\"<br>{{d}}<br>{{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
-  addImageRow("buildings", "<img src=\"{% static \'classes/images/calvinandhobbes.png\'%}\" alt=\"NotFound\" class=\"center\" style=\"width:100%;\">");
+  addImageRow("buildings", "<img src=\"{% static 'classes/images/calvinandhobbes.png'%}\" alt=\"NotFound\" class=\"center\" style=\"width:100%;\">");
 {% endif %}
 
 {% if buildings %}
