--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -221,7 +221,7 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/adrian.jpg' %}" alt="">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/adrian.jpg' %}" alt="Picture of Adrian Tong">
               <h4>Adrian Tong</h4>
               <p class="text-muted">Project Manager</p>
               <ul class="list-inline social-buttons">
@@ -235,14 +235,14 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/david.jpg' %}" alt="">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/david.jpg' %}" alt="Picture of David Todd">
               <h4>David Todd</h4>
               <p class="text-muted">Back-End Developer</p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/yang.jpg' %}" alt="">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/yang.jpg' %}" alt="Picture of Yang Song">
               <h4>Yang Song</h4>
               <p class="text-muted">Front-End Developer</p>
             </div>
@@ -251,21 +251,21 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/andyl.jpg' %}" alt="">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/andyl.jpg' %}" alt="Picture of Andy Lin">
               <h4>Andy Lin</h4>
               <p class="text-muted">Front-End Developer</p>
             </div>
           </div>
           <div class="col-sm-4" >
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/jerry.jpg' %}" alt="">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/jerry.jpg' %}" alt="Picture of Jerry Wei">
               <h4>Jerry Wei</h4>
               <p class="text-muted">Advisor</p>
             </div>
           </div>
           <div class="col-sm-4" >
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/brian2.jpg' %}" alt="">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/brian2.jpg' %}" alt="Picture of Brian Kernighan">
               <h4>Brian Kernighan</h4>
               <p class="text-muted">Instructor</p>
             </div>
