--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -512,7 +512,7 @@ function addImageRow(id, text) {
   var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
   addResultRow("buildings", "Results for: \"{{q}}\"<br>{{d}}<br>{{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
-{% elif not building and not class %}
+{% elif no_matches %}
 //   if(document.getElementById("search").value != null){
 //   }  
   console.log("no results");
