--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -227,7 +227,7 @@
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="https://www.linkedin.com/in/audrey-cheng-48295a114/">
-                    <i class="fa fa-linkedin"></i>
+                    <i class="fa fa-email"></i>
                   </a>
                 </li>
               </ul>
