--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -226,9 +226,10 @@
               <p class="text-muted">Project Manager</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="https://www.linkedin.com/in/audrey-cheng-48295a114/">
-                    <i class="fa fa-email"></i>
+                  <a href="https://www.linkedin.com/in/aaa/">
+                    <i class="fa fa-envelope"></i>
                   </a>
+                  <a href="mailto:aaa" id="emailicon" class="icon fa-envelope fa-lg"><span class="label">Email</span></a>
                 </li>
               </ul>
             </div>
