--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -221,6 +221,7 @@
     .listText {
       color: white;
       font-size: 12px;
+      text-align: left;
       background:none;
       border:none;
       margin:0;
@@ -229,6 +230,9 @@
     }
     .listText:focus {
       background: none;
+    }
+    .listText:hover {
+      color: orange;
     }
     .listTitle {
       color: white;
@@ -514,7 +518,7 @@ function addImageRow(id, text) {
   addResultRow("buildings", "Results for: \"{{q}}\"<br>{{d}}<br>{{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
 {% elif no_matches %}
 //   if(document.getElementById("search").value != null){
-//   }  
+//   }
   console.log("no results");
   var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
