--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -225,12 +225,14 @@
               <h4>Adrian Tong</h4>
               <p class="text-muted">Project Manager</p>
               <ul class="list-inline social-buttons">
-                
-                  <a href="https://www.linkedin.com/in/aaa/">
+                <li class="list-inline-item">
+                  <a href="https://www.linkedin.com/in/adrian-tong/">
+                    <i class="fa fa-linkedin"></i>
+                  </a>
+                  <a href="mailto:atong@princeton.edu">
                     <i class="fa fa-envelope"></i>
                   </a>
-                  <a href="mailto:aaa" id="emailicon" class="icon fa-envelope fa-lg"><span class="label">Email</span></a>
-                
+                </li>
               </ul>
             </div>
           </div>
