--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -504,7 +504,7 @@ function addBuildingRow(id, text) {
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 function addResultRow(id, text) {
-  $("#"+id).append("<div \" style=\"padding-top: 7px; padding-bottom: 10px;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
+  $("#"+id).append("<div \" style=\"padding-top: 7px; padding-bottom: 0;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 function addImageRow(id, text) {
