--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -229,6 +229,8 @@
                   <a href="https://www.linkedin.com/in/adrian-tong/">
                     <i class="fa fa-linkedin"></i>
                   </a>
+                </li>
+                <li class="list-inline-item">
                   <a href="mailto:atong@princeton.edu">
                     <i class="fa fa-envelope"></i>
                   </a>
