--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -257,7 +257,7 @@
     }
     .resultsOverlay {
       height: auto;
-      width: auto;
+      width: width;
       margin-left: -100%;
       position: relative;
       float: left;
