--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -243,6 +243,18 @@
               <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/david.jpg' %}" alt="Picture of David Todd">
               <h4>David Todd</h4>
               <p class="text-muted">Back-End Developer</p>
+              <ul class="list-inline social-buttons">
+                <li class="list-inline-item">
+                  <a href="https://www.linkedin.com/in/david-todd-b73938102/">
+                    <i class="fa fa-linkedin"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="mailto:dtodd@princeton.edu">
+                    <i class="fa fa-envelope"></i>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
           <div class="col-sm-4">
@@ -250,6 +262,18 @@
               <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/yang.jpg' %}" alt="Picture of Yang Song">
               <h4>Yang Song</h4>
               <p class="text-muted">Front-End Developer</p>
+              <ul class="list-inline social-buttons">
+                <li class="list-inline-item">
+                  <a href="https://www.linkedin.com/in/yangsong97/">
+                    <i class="fa fa-linkedin"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="mailto:yangsong@princeton.edu">
+                    <i class="fa fa-envelope"></i>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -258,6 +282,13 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/andyl.jpg' %}" alt="Picture of Andy Lin">
               <h4>Andy Lin</h4>
+              <ul class="list-inline social-buttons">
+                <li class="list-inline-item">
+                  <a href="mailto:andyl@princeton.edu">
+                    <i class="fa fa-envelope"></i>
+                  </a>
+                </li>
+              </ul>
               <p class="text-muted">Front-End Developer</p>
             </div>
           </div>
@@ -265,6 +296,18 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/jerry.jpg' %}" alt="Picture of Jerry Wei">
               <h4>Jerry Wei</h4>
+              <ul class="list-inline social-buttons">
+                <li class="list-inline-item">
+                  <a href="https://www.linkedin.com/in/jerryycwei/">
+                    <i class="fa fa-linkedin"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="mailto:jywei@princeton.edu">
+                    <i class="fa fa-envelope"></i>
+                  </a>
+                </li>
+              </ul>
               <p class="text-muted">Advisor</p>
             </div>
           </div>
@@ -272,6 +315,13 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="{% static 'classes/img/about/brian2.jpg' %}" alt="Picture of Brian Kernighan">
               <h4>Brian Kernighan</h4>
+              <ul class="list-inline social-buttons">
+                <li class="list-inline-item">
+                  <a href="mailto:bwk@cs.princeton.edu">
+                    <i class="fa fa-envelope"></i>
+                  </a>
+                </li>
+              </ul>
               <p class="text-muted">Instructor</p>
             </div>
           </div>
