--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -257,7 +257,7 @@
     }
     .resultsOverlay {
       height: auto;
-      width: auto;
+      width: 100%;
       margin-left: -100%;
       position: relative;
       float: left;
@@ -511,12 +511,14 @@ function addImageRow(id, text) {
   $("#"+id).append("<div \" style=\"padding-top: 5px; width: 400px; padding-bottom: 0;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
-
+{% if num_matches < 9 %}
+  document.getElementById("resultsOverlay").style.width = "auto";
+{% endif %}
 {% if buildings or classes %}
   var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
   addResultRow("buildings", "Results for:<br>\"{{q}}\"<br>{{d}} {{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
-{% elif no_matches %}
+{% elif num_matches == 0 %}
 //   if(document.getElementById("search").value != null){
 //   }
   console.log("no results");
