--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -1026,7 +1026,7 @@ var offset = 0.0001;
      var key = "{{s.lon}} {{s.lat}}"
      var button =
      "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +
-         "<button class=\"btn btn-remove2\" name=\"r\" value=\"{{s.pk}}b\" type=\"submit\">" +
+         "<button class=\"btn btn-remove\" name=\"r\" value=\"{{s.pk}}b\" type=\"submit\">" +
              "<i class=\"fa fa-close\">"+"</i>"+"Remove"+
          "</button>" +
      "</form>";
