--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -264,7 +264,7 @@
               <p class="text-muted">Front-End Developer</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="https://www.linkedin.com/in/yangsong97/">
+                  <a href="https://www.linkedin.com/in/yangsong97/"target="_blank">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
