--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -226,7 +226,7 @@
               <p class="text-muted">Project Manager</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="https://www.linkedin.com/in/adrian-tong/">
+                  <a href="https://www.linkedin.com/in/adrian-tong/"target="_blank">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
@@ -245,7 +245,7 @@
               <p class="text-muted">Back-End Developer</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="https://www.linkedin.com/in/david-todd-b73938102/">
+                  <a href="https://www.linkedin.com/in/david-todd-b73938102/"target="_blank">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
@@ -299,7 +299,7 @@
               <p class="text-muted">Advisor</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="https://www.linkedin.com/in/jerryycwei/">
+                  <a href="https://www.linkedin.com/in/jerryycwei/"target="_blank">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
