--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -250,6 +250,7 @@
       max-width: 40%;
       overflow-y: auto;
       font-size: 12px;
+      z-index: 8;
     }
     /* Search result overlay */
     .resultsContainer {
