try to adjust autocomplete for mobile

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -209,7 +209,7 @@
       right: 0;
       bottom: 0;
       background-color: rgba(0,0,0,0.6);
-      z-index: 4;
+      z-index: 1;
       cursor: pointer;
     }
     .btn-remove2{
@@ -618,8 +618,8 @@ toggle between hiding and showing the dropdown content */
     collapse = false;
   }
   else{
-    document.getElementById("ui-autocomplete").width="60%";
-    document.getElementById("ui-autocomplete").height="70%";
+    document.getElementById("ui-autocomplete").width="500px";
+    document.getElementById("ui-autocomplete").height="600px";
   }
 
   $('.dropdown-menu').on('click', function(e) {
