--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -618,8 +618,9 @@ toggle between hiding and showing the dropdown content */
     collapse = false;
   }
   else{
-    document.getElementById("ui-autocomplete").width="500px";
-    document.getElementById("ui-autocomplete").height="600px";
+    document.getElementById("ui-autocomplete").maxWidth="60%";
+    document.getElementById("ui-autocomplete").maxHeight="70%";
+    console.log("mobile styling");
   }
 
   $('.dropdown-menu').on('click', function(e) {
