--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -618,8 +618,8 @@ toggle between hiding and showing the dropdown content */
     collapse = false;
   }
   else{
-    document.getElementById("ui-autocomplete").maxWidth="60%";
-    document.getElementById("ui-autocomplete").maxHeight="70%";
+    document.getElementById("ui-autocomplete").style.maxWidth="60%";
+    document.getElementById("ui-autocomplete").style.maxHeight="70%";
     console.log("mobile styling");
   }
 
