--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -618,9 +618,9 @@ toggle between hiding and showing the dropdown content */
     collapse = false;
   }
   else{
-    document.getElementById("ui-autocomplete").style.maxWidth="60%";
-    document.getElementById("ui-autocomplete").style.maxHeight="70%";
-    console.log("mobile styling");
+//     document.getElementById("ui-autocomplete").style.maxWidth="60%";
+//     document.getElementById("ui-autocomplete").style.maxHeight="70%";
+     console.log("mobile styling");
   }
 
   $('.dropdown-menu').on('click', function(e) {
