try to change mobile

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -252,6 +252,17 @@
       font-size: 12px;
       z-index: 8;
     }
+    @media (max-width: 600) {
+      .ui-autocomplete {
+        width: auto;
+        height: auto;
+        max-height: 70%;
+        max-width: 60%;
+        overflow-y: auto;
+        font-size: 12px;
+        z-index: 8;
+      }
+    }
     /* Search result overlay */
     .resultsContainer {
       padding-top: 45px;
