--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -88,7 +88,6 @@
       height: auto;
       width: 100%;
       height: 55px;
-/*       max-height: 85px; */
       margin-left: -100%;
       position: relative;
       float: right;
@@ -252,9 +251,9 @@
       font-size: 12px;
       z-index: 8;
     }
-    @media (max-width: 600) {
+    @media only screen and (max-width: 600px) {
       .ui-autocomplete {
-        width: auto;
+        width: 60%;
         height: auto;
         max-height: 70%;
         max-width: 60%;
